# MK_II-Code

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  setup.sh
Datalogging/9_10_17/: 10.TXT  11.TXT  12.TXT  13.TXT  14.TXT  3.TXT  4.TXT  5.TXT  6.TXT  7.TXT  8.TXT  9.TXT
McGill Reference/McGill CAN lib/: CAN.c  CAN.h
McGill Reference/McGill RMS interface/: pm100dx.c  pm100dx.h  powertrain_logic.c  powertrain_logic.h
boards/: avr.cmake  receive_Blink_OEM.ino
boards/AirControl/: CMakeLists.txt  main.c
boards/BMS_2018/: CMakeLists.txt  convert_values.py  log_uart.c  log_uart.h  main.c  output.txt  save_data.txt
boards/BMS_2018/DC2259_test/: DC2259_test.ino  i2c.cpp
boards/BMS_Outline/: README.md  out.html
boards/BMS_master/: CMakeLists.txt  main.c  main.h  read_can.py  read_can_test.py  read_cells.py
boards/BMS_master/DC2259_eeprom/: DC2259_eeprom.ino  eeprom.h
boards/BMS_master/DC2259_test/: DC2259_test.ino  LTC6811_daisy.cpp  LTC6811_daisy.h  eeprom.cpp  eeprom.h  i2c.cpp  i2c.h  mux_control.cpp  mux_control.h
boards/Basic_CAN_Rx/: CMakeLists.txt  main.c
boards/Basic_CAN_Tx/: CMakeLists.txt  main.c
boards/Blinky/: CMakeLists.txt  CMakeLists.txt.backup2  main.c
boards/Byron-Throttle/: CMakeLists.txt  throttle.c
boards/Charging/: CMakeLists.txt  lcd.h  main.c
boards/Cooling/: CMakeLists.txt  ds18b20.c  main.c  main1.x  onewire.x  readingio.x  tempPump.x  testTemp.x
boards/Dash_4test_mags/: CMakeLists.txt  main.c
boards/Dashboard/: CMakeLists.txt  dash.c  main.c
boards/Dashboard_R/: CMakeLists.txt  dashboard.c  lcd.c  lcd.h  main.c
boards/Datalogging/: CMakeLists.txt  README.md  log_CAN.ino
boards/Datalogging/log_CAN/: log_CAN.ino
boards/H4CK3RB04rD/: CMakeLists.txt  can_api.c  main.c
boards/H4CK3RB04rD_left/: CMakeLists.txt  main.c  test.c  test.h
boards/H4CK3RB04rD_right/: CMakeLists.txt  main.c
boards/HACKERBOARDV2/: CMakeLists.txt  buttons.c  buttons.h  can.c  can.h  display.c  display.h  lcd.c  lcd.h  main.c  pinDefinitions.h  potentiometer.c  potentiometer.h  state.c  state.h  timer.c  timer.h
boards/MSPM/: CMakeLists.txt  main.c
boards/MSPMonitor/: CMakeLists.txt
boards/MotorController/: CMakeLists.txt  main.c
boards/Read_CAN/: read_can.py
boards/Read_CAN/send_CAN/: send_CAN.ino
boards/SPI_master/: CMakeLists.txt  lcd.h  spi_master.c
boards/SPI_slave/: CMakeLists.txt  main.c  spi_slave.c
boards/SW_Sensor/: CMakeLists.txt  main.c
boards/Test/: CMakeLists.txt  main.c
boards/Throttle_Brake/: CMakeLists.txt  main.c
boards/Timer_Blinky/: CMakeLists.txt  main.c
boards/Transom/: CMakeLists.txt  main.c
boards/speedo_test/: CMakeLists.txt
lib/: can_api.c  can_api.h
